@@ -1,10 +1,11 @@
 #French translation maintained by Nicosmos
+#Traduction française maintenue par Nicosmos
 
-#Common strings
+#Common strings - Général
 pp_translate_string "Back" "Retour"
 pp_translate_string "PRESS ANY KEY TO START" "APPUYEZ SUR UNE TOUCHE POUR DÉMARRER"
 
-#Game type select
+#Game type select - Sélection du type de jeu
 pp_translate_string "Enter an event" "Compétition"
 pp_translate_string "Practice" "Entraînement"
 pp_translate_string "Configuration" "Configuration"
@@ -18,11 +19,14 @@ pp_translate_string "Audio" "Audio"
 pp_translate_string "Keyboard" "Clavier"
 pp_translate_string "Joystick" "Joystick"
 
-#Config mode
+#Config mode - Mode configuration
 pp_translate_string "Cancel" "Annuler"
 pp_translate_string "Ok" "Valider"
 
-#Graphics configuration
+#Model choice - Choix du modèle
+pp_translate_string "Model:" "Modèle :"
+
+#Graphics configuration - Configuration graphique
 pp_translate_string "Graphics Configuration" "Configuration graphique"
 pp_translate_string "Language:" "Langue :"
 pp_translate_string "Show UI Snow:" "Neige dans l'interface :"
@@ -32,7 +36,7 @@ pp_translate_string "Draw Fog:" "Brouillard :"
 pp_translate_string "Reflections:" "Reflets :"
 pp_translate_string "Shadows:" "Ombres :"
 
-#Video configuration
+#Video configuration - Configuration vidéo
 pp_translate_string "Video Configuration" "Configuration vidéo"
 pp_translate_string "Resolution:" "Résolution :"
 pp_translate_string "Bits Per Pixel:" "Bits par pixel :"
@@ -40,7 +44,7 @@ pp_translate_string "Fullscreen:" "Plein écran :"
 pp_translate_string "Experimental (needs restart)" "Expérimental (nécessite un redémarrage)"
 pp_translate_string "Enable FSAA:" "Activer FSAA :"
 
-#Audio configuration
+#Audio configuration - Configuration audio
 pp_translate_string "Audio Configuration" "Configuration audio"
 pp_translate_string "Sound Effects:" "Effets sonores :"
 pp_translate_string "Music:" "Musique"
@@ -50,7 +54,7 @@ pp_translate_string "Stereo:" "Stéréo :"
 pp_translate_string "Bits Per Sample:" "Bits par échantillon :"
 pp_translate_string "Samples Per Second:" "Échantillons par seconde :"
 
-#Keyboard configuration
+#Keyboard configuration - Configuration du clavier
 pp_translate_string "Keyboard Configuration" "Configuration du clavier"
 pp_translate_string "Turn left:" "Tourner à gauche :"
 pp_translate_string "Turn right:" "Tourner à droite :"
@@ -60,11 +64,11 @@ pp_translate_string "Jump:" "Sauter :"
 pp_translate_string "Trick:" "Saut périlleux :"
 pp_translate_string "Reset:" "Réinitialiser :"
 
-#Joystick configuration
+#Joystick configuration - Configuration du Joystick
 pp_translate_string "Joystick Configuration" "Configuration du Joystick"
 pp_translate_string "Enable Joystick" "Utiliser le Joystick"
 
-#Race select
+#Race select - Sélection de la course
 pp_translate_string "Race!" "C'est parti !"
 pp_translate_string "Select a race" "Choisissez une course"
 pp_translate_string "Contributed by:" "Auteur :"
@@ -73,7 +77,7 @@ pp_translate_string "Time:" "Temps :"
 pp_translate_string "Herring:" "Harengs :"
 pp_translate_string "Score:" "Score :"
 
-#Event select
+#Event select - Sélection de la compétition
 pp_translate_string "Continue" "Continuer"
 pp_translate_string "Select event and cup" "Choisissez une compétition et une coupe"
 pp_translate_string "Event:" "Compétition :"
@@ -82,20 +86,20 @@ pp_translate_string "You've won this cup!" "Vous avez remporté cette coupe !"
 pp_translate_string "You must complete this cup next" "Vous devez remporter cette coupe"
 pp_translate_string "You cannot enter this cup yet" "Vous ne pouvez pas encore participer à cette coupe"
 
-#Event race select
+#Event race select - Sélection de la course dans la compétition
 pp_translate_string "You don't have any lives left." "Il ne vous reste plus aucune vie."
 pp_translate_string "Race won! Your result:" "Vous avez réussi la course ! Votre score :"
 pp_translate_string "Needed to advance:" "Nécessaire pour avancer :"
 pp_translate_string "You can't enter this race yet." "Vous ne pouvez pas encore participer à cette course."
 
-#Loading
+#Loading - Chargement
 pp_translate_string "Loading, Please Wait..." "Chargement, veuillez patienter ..."
 
-#Paused
+#Paused - En pause
 pp_translate_string "Resume" "Reprendre"
 pp_translate_string "Paused" "Pause"
 
-#Race over
+#Race over - Fin de la course
 pp_translate_string "Race Over" "Course terminée"
 pp_translate_string "Time: %02d:%02d.%02d" "Temps : %02d:%02d.%02d"
 pp_translate_string "Herring: %3d" "Harengs : %3d"
@@ -109,19 +113,19 @@ pp_translate_string "Congratulations! You won the cup!" "Félicitations, vous av
 pp_translate_string "You advanced to the next race!" "Vous avancez jusqu'à la course suivante !"
 pp_translate_string "You didn't advance." "Vous n'avez pas avancé."
 
-#HUD
-#Strings are prefixed to prevent collisions with the UI
+#HUD - Pendant le jeu
+#Strings are prefixed to prevent collisions with the UI - Les lignes ont des préfixes pour éviter les collisions avec l'interface
 pp_translate_string "H|FPS: %.1f" "FPS : %.1f"
 pp_translate_string "H|Time:" "Temps :"
 pp_translate_string "H|km/h" "km/h"
-#Herring counter
+#Herring counter - Compteur de harengs
 pp_translate_string "H|%03d" "%03d"
-#Time counter
+#Time counter - Compteur de temps
 pp_translate_string "H|%02d:%02d:%02d" "%02d:%02d:%02d"
-#Speed counter
+#Speed counter - Compteur de vitesse
 pp_translate_string "H|%.0f" "%.0f"
 
-#Highscore
+#Highscore - Meilleurs scores
 pp_translate_string "Highscore" "Meilleurs scores"
 pp_translate_string "You made it to the %s place in the highscore!" "Vous êtes %s dans les meilleurs scores !"
 pp_translate_string "Player name:" "Nom du joueur :"
